--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     background:linear-gradient(to bottom right, blue, purple, plum);
-    height: 300px;
+    padding: 20px 0;
 }
 h1{
     text-align: center;
