style changes and forms updates

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -2,6 +2,8 @@
   min-height: 100px;
   background: #E5E5E5;
   position: relative;
+  background:snow
+
 }
 
 .footer span {
@@ -10,5 +12,7 @@
   left: 0;
   right: 0;
   padding: 3px;
-  background: #B8B8B8;
+  background: sliver;
+  text-align: center;
+
 }
