--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,18 @@
 * {
   box-sizing: border-box;
+  
 }
 
 html,
-body,
 #root,
 #root > div,
 div[data-reactroot] {
   height: 100%;
   padding: 0;
   margin: 0;
+  
+}
+
+body{ background-image: url("/public/images/tree_bark.png")
+
 }
