--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,6 @@ div[data-reactroot] {
   
 }
 
-body{ background-image: url("/public/images/tree_bark.png")
+body{ background: url("http://absfreepic.com/absolutely_free_photos/small_photos/baby-lamb-2439x1626_15964.jpg");
 
 }
