added all the san to the database and reformat pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,6 @@ div[data-reactroot] {
   
 }
 
-body{ background: url("http://absfreepic.com/absolutely_free_photos/small_photos/baby-lamb-2439x1626_15964.jpg");
-
+body{ background: url("http://www.modafinilsale.com/data/out/659/229282902-baby-animal-wallpaper-for-desktop.jpg");
+      background-size: cover;
 }
