--- a/client/src/components/Container/Container.css
+++ b/client/src/components/Container/Container.css
@@ -1,12 +1,14 @@
-.Container  {
-  min-height: 100px;
-    
-   
-    padding: 20px 0;
-}
-
+.
 h1{
     text-align: center;
     color:white;
     font-family: 'Monoton', cursive;
 }
+h2{
+    text-align: center;
+    color:white;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+
+}
+
+
