--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -2,8 +2,10 @@
   min-height: 100px;
   background: #E5E5E5;
   position: relative;
-  background:snow
-
+  background:snow;
+  clear : both;
+  z-index : 10;
+  margin-top: -3em;
 }
 
 .footer span {
@@ -14,5 +16,5 @@
   padding: 3px;
   background: sliver;
   text-align: center;
-
+  /* z-index: -1; */
 }
