--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
-  min-height: 100px;
-  background: #E5E5E5;
+  min-height: 50px;
   position: relative;
-  background:snow
+  background:linear-gradient(to bottom right,#5F9EA0,  Green, rgb(160, 221, 211) );
+  padding: 20px 0;
 
 }
 
@@ -12,7 +12,18 @@
   left: 0;
   right: 0;
   padding: 3px;
-  background: sliver;
-  text-align: center;
 
+}
+
+.footer div{
+  padding: 10px;
+  margin:10 px;
+  text-align: center;
+   color:white;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 15px;
+}
+
+.footer a{
+  color: snow;
 }
