--- a/client/src/components/NavBarComp/NavBarComp.css
+++ b/client/src/components/NavBarComp/NavBarComp.css
@@ -2,8 +2,6 @@ nav.navbar.navbar-default {
   margin-bottom: 0;
 }
 
-.navbar-default{
-  padding:10px
-  
+.navbar-default {
+  padding: 10px;
 }
-
