--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,8 @@
 * {
   box-sizing: border-box;
-  
 }
 
-html,body,
+/* html,body,
 #root,
 #root > div,
 div[data-reactroot] {
@@ -11,13 +10,12 @@ div[data-reactroot] {
   padding: 0;
   margin: 0;
   
-}
+} */
 
-body{ background-image: url("https://images.unsplash.com/photo-1525017165560-1dcdd90266bf?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f127c60a2496bb1d63bcbc759c13f00d&auto=format&fit=crop&w=634&q=80");
-      background-size: repeat;
-}
-
-
+/* body {
+  background-image: url("https://images.unsplash.com/photo-1525017165560-1dcdd90266bf?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f127c60a2496bb1d63bcbc759c13f00d&auto=format&fit=crop&w=634&q=80");
+  background-size: repeat;
+} */
 
 /* https://images.unsplash.com/photo-1525017165560-1dcdd90266bf?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f127c60a2496bb1d63bcbc759c13f00d&auto=format&fit=crop&w=634&q=80
 
