--- a/client/src/components/ImageBackground/ImageBackground.css
+++ b/client/src/components/ImageBackground/ImageBackground.css
@@ -1,8 +1,7 @@
 .imageBack {
-  height: 500px;  
+  height: 500px;
   background-size: cover;
   background-position: center;
   position: relative;
-  background-color:blue
-
+  background-color: blue;
 }
