--- a/client/src/components/SearchResults/SearchResults.css
+++ b/client/src/components/SearchResults/SearchResults.css
@@ -1,7 +1,7 @@
-ul.search-results{
+ul.search-results {
   margin: 0 auto;
 }
 img {
-  width:300px;
-  background-color: lightgray
+  width: 300px;
+  background-color: lightgray;
 }
