--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,9 +1,13 @@
 .footer {
-  min-height: 50px;
-  position: relative;
-  background:linear-gradient(to bottom right,#5F9EA0,  Green, rgb(160, 221, 211) );
+  /* min-height: 50px;
+  position: relative; */
+  background: linear-gradient(
+    to bottom right,
+    #5f9ea0,
+    Green,
+    rgb(160, 221, 211)
+  );
   padding: 20px 0;
-
 }
 
 .footer span {
@@ -12,18 +16,17 @@
   left: 0;
   right: 0;
   padding: 3px;
-
 }
 
-.footer div{
+.footer div {
   padding: 10px;
-  margin:10 px;
+  margin: 10 px;
   text-align: center;
-   color:white;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 15px;
+  color: white;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 15px;
 }
 
-.footer a{
+.footer a {
   color: snow;
 }
