--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  /* min-height: 50px;
-  position: relative; */
+  /* min-height: 50px; */
+  position: relative;
   background: linear-gradient(
     to bottom right,
     #5f9ea0,
@@ -23,7 +23,7 @@
   margin: 10 px;
   text-align: center;
   color: white;
-  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 15px;
 }
 
